--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Build and test
-        run: mvn -B test -DskipTests=false
+        run: |
+          set -e
+          mvn -B -X test | tee build.log
+      - name: Upload build log
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-log
+          path: build.log
+      - name: Upload surefire reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: surefire-reports
+          path: target/surefire-reports/**
