--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,13 @@ jobs:
           set -e
           mvn -B -X test | tee build.log
       - name: Upload build log
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: build-log
           path: build.log
       - name: Upload surefire reports
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: surefire-reports
